--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -130,7 +130,7 @@ select {
   font: inherit;
   margin: 0;
   padding: 0;
-  border: none;
+  border: 0.6px solid #d1d5db;
   background: none;
   box-sizing: border-box;
 }
