--- a/public/css/style.css
+++ b/public/css/style.css
@@ -139,7 +139,7 @@ select {
   font: inherit;
   margin: 0;
   padding: 0;
-  border: none;
+  border: 0.6px solid #d1d5db;
   background: none;
   box-sizing: border-box;
 }
@@ -1045,23 +1045,6 @@ video {
   background-color: rgb(224 231 255 / var(--tw-bg-opacity, 1));
   --tw-text-opacity: 1;
   color: rgb(55 48 163 / var(--tw-text-opacity, 1));
-}
-
-.badge-secondary {
-  display: inline-flex;
-  align-items: center;
-  border-radius: 9999px;
-  padding-left: 0.625rem;
-  padding-right: 0.625rem;
-  padding-top: 0.125rem;
-  padding-bottom: 0.125rem;
-  font-size: 0.75rem;
-  line-height: 1rem;
-  font-weight: 500;
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity, 1));
 }
 
 /* Table Components */
@@ -2099,10 +2082,6 @@ video {
   --tw-gradient-to: #c7d2fe var(--tw-gradient-to-position);
 }
 
-.to-primary-600 {
-  --tw-gradient-to: #4f46e5 var(--tw-gradient-to-position);
-}
-
 .to-primary-700 {
   --tw-gradient-to: #4338ca var(--tw-gradient-to-position);
 }
@@ -2550,10 +2529,6 @@ video {
 
 .duration-300 {
   transition-duration: 300ms;
-}
-
-.duration-500 {
-  transition-duration: 500ms;
 }
 
 /* Responsive Sidebar */
@@ -3400,14 +3375,6 @@ video {
     display: none;
   }
 
-  .md\:w-1\/2 {
-    width: 50%;
-  }
-
-  .md\:w-3\/4 {
-    width: 75%;
-  }
-
   .md\:w-full {
     width: 100%;
   }
@@ -3448,14 +3415,6 @@ video {
     grid-column: span 2 / span 2;
   }
 
-  .lg\:w-1\/3 {
-    width: 33.333333%;
-  }
-
-  .lg\:w-2\/3 {
-    width: 66.666667%;
-  }
-
   .lg\:w-3\/4 {
     width: 75%;
   }
@@ -3474,14 +3433,6 @@ video {
 }
 
 @media (min-width: 1280px) {
-  .xl\:w-1\/4 {
-    width: 25%;
-  }
-
-  .xl\:w-1\/2 {
-    width: 50%;
-  }
-
   .xl\:w-2\/3 {
     width: 66.666667%;
   }
